OPTION(HAPPY_BUILD_TEST "If build test" ON)
MESSAGE(STATUS "HAPPY_BUILD_TEST = ${HAPPY_BUILD_TEST}")


IF ( HAPPY_BUILD_TEST )
   MESSAGE(STATUS "build test")
   ADD_SUBDIRECTORY(test)
ELSE ()
    MESSAGE(STATUS "do not build test")
ENDIF ()

INCLUDE_DIRECTORIES(src)
ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(app)